--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
@@ -16,13 +16,14 @@
   "author": "Jesstrej <jessica16tor@yahoo.com>",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0",
     "body-parser": "^1.18.3",
+    "concurrently": "^3.5.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "if-env": "^1.0.4",
     "mongoose": "^5.2.15",
+    "nodemon": "^1.11.0",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2"
